tests/functional/lang/eval-fail-derivation-structuredAttrs-stack-overflow.err.exp
error:
       … while evaluating the attribute 'outPath'
         at «nix-internal»/derivation-internal.nix:53:7:
           52|     value = commonAttrs // {
           53|       outPath = strict.${outputName};
             |       ^
           54|       drvPath = strict.drvPath;

       … while calling the 'derivationStrict' builtin
         at «nix-internal»/derivation-internal.nix:40:12:
           39|
           40|   strict = derivationStrict drvAttrs;
             |            ^
           41|

       … while evaluating derivation 'test'
         whose name attribute is located at /pwd/lang/eval-fail-derivation-structuredAttrs-stack-overflow.nix:5:3

       … while evaluating attribute 'nested' of derivation 'test'
         at /pwd/lang/eval-fail-derivation-structuredAttrs-stack-overflow.nix:9:3:
            8|   __structuredAttrs = true;
            9|   nested =
             |   ^
           10|     let

       … while evaluating attribute 'tail'
         at /pwd/lang/eval-fail-derivation-structuredAttrs-stack-overflow.nix:12:71:
           11|       long = builtins.genList (x: x) 100000;
           12|       reverseLinkedList = builtins.foldl' (tail: head: { inherit head tail; }) null long;
             |                                                                       ^
           13|     in

       (9995 duplicate frames omitted)

       … while evaluating attribute 'head'
         at /pwd/lang/eval-fail-derivation-structuredAttrs-stack-overflow.nix:12:66:
           11|       long = builtins.genList (x: x) 100000;
           12|       reverseLinkedList = builtins.foldl' (tail: head: { inherit head tail; }) null long;
             |                                                                  ^
           13|     in

       error: stack overflow; max-call-depth exceeded
       at /pwd/lang/eval-fail-derivation-structuredAttrs-stack-overflow.nix:12:66:
           11|       long = builtins.genList (x: x) 100000;
           12|       reverseLinkedList = builtins.foldl' (tail: head: { inherit head tail; }) null long;
             |                                                                  ^
           13|     in
